--- a/HackerNews.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/HackerNews.Web/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -11,9 +11,9 @@
           <li class="nav-item" [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
             <a class="nav-link text-dark" [routerLink]='["/"]'>Home</a>
           </li>
-          <li class="nav-item" [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
+          <!--<li class="nav-item" [routerLinkActive]='["link-active"]' [routerLinkActiveOptions]='{ exact: true }'>
             <a class="nav-link text-dark" [routerLink]='["/boiler"]'>Boilerplate Home</a>
-          </li>
+          </li>-->
 
         </ul>
       </div>
